# novel2comic

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md  siliconflow.yaml  stage_anchors.yaml  stage_director_review.yaml  stage_image.yaml  stage_segment.yaml  stage_tts.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_STRUCTURE.md  CONFIG_REFERENCE.md  NAMING_CONVENTIONS.md  PROJECT_STATUS.md  chapter_clean.txt
scripts/: debug_refine_split.py  normalize_chapter_indent.py  normalize_to_utf8.py  smoke_audio_pipeline.py  smoke_director_review.py  smoke_full_chain.py  smoke_image_generate.py  smoke_image_siliconflow.py  smoke_strict_image_review.py  smoke_tts_cosyvoice2.py  smoke_tts_style_prompt.py  split_novel_to_chapters.py
src/novel2comic/: __main__.py  cli.py
src/novel2comic/core/: audio_utils.py  config_loader.py  image_prompt.py  image_qc.py  image_review_schema.py  io.py  manifest.py  quote_splitter.py  speech_schema.py  split_baseline.py  tts_utils.py
src/novel2comic/director_review/: __init__.py  apply.py  client.py  fallback.py  prompt.py  schema.py
src/novel2comic/pipeline/: orchestrator.py
src/novel2comic/stages/: align.py  anchors_generate.py  base.py  director_review.py  image_generate.py  ingest.py  plan.py  (+3 more)
tests/: test_align_lite.py  test_apply_prompt_patch.py  test_core.py  test_director_review.py  test_extract_must_have.py  test_image_review_schema.py  test_pipeline.py  test_quote_splitter.py  test_scripts.py  test_skills.py  test_speech_plan.py  test_tts_style_prompt.py  test_tts_utils.py  test_voice_select.py
(+21 files in other folders)
