[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel2comic"
version = "0.1.0"
description = "Novel -> motion comic pipeline (ShotScript + ChapterPack)"
requires-python = ">=3.10"
dependencies = [
	"httpx>=0.27",
	"python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
novel2comic = "novel2comic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
